--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.leetcode</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>leetcode</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>demo</name>
+    <name>leetcode</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
